资源包/LabVIEW有用程序/例程DMC3000系列/VC.NET/例2_回原点运动/LTDMC.h

typedef unsigned long       DWORD;
typedef unsigned short      WORD;
 	

//运动状态检测		
DMC_API double __stdcall dmc_read_current_speed(WORD CardNo,WORD axis);	//读取指定轴的当前速度
DMC_API double __stdcall dmc_read_vector_speed(WORD CardNo);	//读取当前卡的插补速度
DMC_API long __stdcall dmc_get_position(WORD CardNo,WORD axis);	//读取指定轴的当前位置
DMC_API short __stdcall dmc_set_position(WORD CardNo,WORD axis,long current_position);	//设定指定轴的当前位置
DMC_API long __stdcall dmc_get_target_position(WORD CardNo,WORD axis);        //读取指定轴的目标位置
DMC_API short __stdcall dmc_check_done(WORD CardNo,WORD axis);	//读取指定轴的运动状态
DMC_API DWORD __stdcall dmc_axis_io_status(WORD CardNo,WORD axis);	//读取指定轴有关运动信号的状态
DMC_API short __stdcall dmc_stop(WORD CardNo,WORD axis,WORD stop_mode);	//单轴减速停止/立即停止
DMC_API short __stdcall dmc_check_done_multicoor(WORD CardNo,WORD Crd); //调用插补运动，请使用该函数检测运动状态
DMC_API short __stdcall dmc_stop_multicoor(WORD CardNo,WORD Crd,WORD stop_mode);//调用插补运动，请使用该函数停止运动状态
DMC_API short __stdcall dmc_emg_stop(WORD CardNo);	//紧急停止所有轴
//检测轴到位状态
DMC_API short __stdcall  dmc_set_factor_error(WORD CardNo,WORD axis,double factor,long error);//设置编码器系数、误差带
DMC_API short __stdcall  dmc_get_factor_error(WORD CardNo,WORD axis,double* factor,long* error);//读取编码器系数、误差带
DMC_API short __stdcall  dmc_check_success_pulse(WORD CardNo,WORD axis);//检测指令位置到位情况
DMC_API short __stdcall  dmc_check_success_encoder(WORD CardNo,WORD axis);//检测编码器反馈位置到位情况
//3800专用 主卡与接线盒通讯状态
DMC_API short __stdcall dmc_LinkState(WORD CardNo,WORD* State);	//连接状态
//密码管理
DMC_API short __stdcall dmc_check_sn(WORD CardNo, const char * check_sn);//验证密码，校验3次失败之后再次校验将返回校验失败
DMC_API short __stdcall dmc_write_sn(WORD CardNo, const char * new_sn);//改写密码
//DMC5410 DMC5800专用
DMC_API short __stdcall dmc_get_axis_run_mode(WORD CardNo, WORD axis,WORD* run_mode);//轴运动模式
DMC_API short __stdcall dmc_get_equiv(WORD CardNo,WORD axis, double *equiv);//脉冲当量
DMC_API short __stdcall dmc_set_equiv(WORD CardNo,WORD axis, double equiv);
DMC_API short __stdcall dmc_set_backlash_unit(WORD CardNo,WORD axis,double backlash);//反向间隙
DMC_API short __stdcall dmc_get_backlash_unit(WORD CardNo,WORD axis,double *backlash);
DMC_API short __stdcall dmc_set_position_unit(WORD CardNo,WORD axis, double pos);//当前指令位置
DMC_API short __stdcall dmc_get_position_unit(WORD CardNo,WORD axis, double * pos);
DMC_API short __stdcall dmc_set_encoder_unit(WORD CardNo,WORD axis, double pos);//当前反馈位置
DMC_API short __stdcall dmc_get_encoder_unit(WORD CardNo,WORD axis, double * pos);
DMC_API short __stdcall dmc_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//定长
DMC_API short __stdcall dmc_t_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//对称T型定长
DMC_API short __stdcall dmc_ex_t_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//非对称T型定长
DMC_API short __stdcall dmc_s_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//对称S型定长
DMC_API short __stdcall dmc_ex_s_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//非对称S型定长
DMC_API short __stdcall dmc_line_unit(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList,double* Target_Pos,WORD posi_mode);//单段直线
DMC_API short __stdcall dmc_arc_move_center_unit(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList,double *Target_Pos,double *Cen_Pos,WORD Arc_Dir,long Circle,WORD posi_mode);//单段圆心圆弧/螺旋线/渐开线
DMC_API short __stdcall dmc_arc_move_radius_unit(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList,double *Target_Pos,double Arc_Radius,WORD Arc_Dir,long Circle,WORD posi_mode);//单段半径圆弧/螺旋线
DMC_API short __stdcall dmc_arc_move_3points_unit(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList,double *Target_Pos,double *Mid_Pos,long Circle,WORD posi_mode);//单段三点圆弧/螺旋线
DMC_API short __stdcall dmc_read_current_speed_unit(WORD CardNo,WORD axis, double *current_speed);//轴当前运行速度
DMC_API short __stdcall dmc_set_vector_profile_unit(WORD CardNo,WORD Crd,double Min_Vel,double Max_Vel,double Tacc,double Tdec,double Stop_Vel);//单段插补速度参数
DMC_API short __stdcall dmc_get_vector_profile_unit(WORD CardNo,WORD Crd,double* Min_Vel,double* Max_Vel,double* Tacc,double* Tdec,double* Stop_Vel);
DMC_API short __stdcall dmc_set_vector_s_profile(WORD CardNo,WORD Crd,WORD s_mode,double s_para);	//设置S型速度曲线参数
DMC_API short __stdcall dmc_get_vector_s_profile(WORD CardNo,WORD Crd,WORD s_mode,double *s_para);
DMC_API short __stdcall dmc_set_profile_unit(WORD CardNo,WORD axis,double Min_Vel,double Max_Vel,double Tacc,double Tdec,double Stop_Vel);//单轴速度参数
DMC_API short __stdcall dmc_get_profile_unit(WORD CardNo,WORD axis,double* Min_Vel,double* Max_Vel,double* Tacc,double* Tdec,double* Stop_Vel);
DMC_API short __stdcall dmc_reset_target_position_unit(WORD CardNo,WORD axis, double New_Pos);//在线变位
DMC_API short __stdcall dmc_update_target_position_unit(WORD CardNo,WORD axis, double New_Pos);//强行变位
DMC_API short __stdcall dmc_change_speed_unit(WORD CardNo,WORD axis, double New_Vel,double Taccdec);//在线变速
//连续插补
DMC_API short __stdcall dmc_conti_open_list(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList); //打开连续缓存区
DMC_API short __stdcall dmc_conti_close_list(WORD CardNo,WORD Crd);	//关闭连续缓存区
DMC_API short __stdcall dmc_conti_stop_list(WORD CardNo,WORD Crd,WORD stop_mode);	//连续插补中停止
DMC_API short __stdcall dmc_conti_pause_list(WORD CardNo,WORD Crd);	//连续插补中暂停
DMC_API short __stdcall dmc_conti_start_list(WORD CardNo,WORD Crd);	//开始连续插补
DMC_API long __stdcall dmc_conti_remain_space(WORD CardNo,WORD Crd);	//查连续插补剩余缓存数
DMC_API long __stdcall dmc_conti_read_current_mark (WORD CardNo,WORD Crd);	//读取当前连续插补段的标号
DMC_API short __stdcall dmc_conti_set_blend(WORD CardNo,WORD Crd,WORD enable);//blend拐角过度模式
DMC_API short __stdcall dmc_conti_get_blend(WORD CardNo,WORD Crd,WORD* enable);
DMC_API short __stdcall dmc_conti_set_profile_unit(WORD CardNo,WORD Crd,double Min_Vel,double Max_vel,double Tacc,double Tdec,double Stop_Vel);//设置连续插补速度
DMC_API short __stdcall dmc_conti_set_s_profile(WORD CardNo,WORD Crd,WORD s_mode,double s_para);//设置连续插补平滑时间
DMC_API short __stdcall dmc_conti_get_s_profile(WORD CardNo,WORD Crd,WORD s_mode,double* s_para);
DMC_API short __stdcall dmc_conti_set_pause_output(WORD CardNo,WORD Crd,WORD action,long mask,long state);//暂停时IO输出 action：0-不动作；1-暂停时输出；2-暂停时输出, 继续运行时恢复；3-停止时输出。
DMC_API short __stdcall dmc_conti_get_pause_output(WORD CardNo,WORD Crd,WORD* action,long* mask,long* state);
DMC_API short __stdcall dmc_conti_set_override(WORD CardNo,WORD Crd,double Percent);//设置每段速度比例  缓冲区指令
DMC_API short __stdcall dmc_conti_change_speed_ratio (WORD CardNo,WORD Crd,double percent);//连续插补动态变速
DMC_API short __stdcall dmc_conti_get_run_state(WORD CardNo,WORD Crd);//读取连续插补状态：0-运行，1-暂停，2-正常停止，3-异常停止
DMC_API short __stdcall dmc_conti_check_done(WORD CardNo,WORD Crd);//检测连续插补运动状态：0-运行，1-停止
DMC_API short __stdcall dmc_conti_wait_input(WORD CardNo,WORD Crd,WORD bitno,WORD on_off,double TimeOut,long mark);//设置连续插补等待输入
DMC_API short __stdcall dmc_conti_delay_outbit_to_start(WORD CardNo, WORD Crd, WORD bitno,WORD on_off,double delay_value,WORD delay_mode,double ReverseTime);//相对于轨迹段起点IO滞后输出
DMC_API short __stdcall dmc_conti_delay_outbit_to_stop(WORD CardNo, WORD Crd, WORD bitno,WORD on_off,double delay_time,double ReverseTime);//相对于轨迹段终点IO滞后输出
DMC_API short __stdcall dmc_conti_ahead_outbit_to_stop(WORD CardNo, WORD Crd, WORD bitno,WORD on_off,double ahead_value,WORD ahead_mode,double ReverseTime);//相对轨迹段终点IO提前输出
DMC_API short __stdcall dmc_conti_accurate_outbit_unit(WORD CardNo, WORD Crd, WORD cmp_no,WORD on_off,WORD map_axis,double rel_dist,WORD pos_source,double ReverseTime);//确定位置精确输出
DMC_API short __stdcall dmc_conti_write_outbit(WORD CardNo, WORD Crd, WORD bitno,WORD on_off,double ReverseTime);//缓冲区立即IO输出
DMC_API short __stdcall dmc_conti_clear_io_action(WORD CardNo, WORD Crd, DWORD IoMask);//清除段内未执行完的IO动作,防止在下一段执行
DMC_API short __stdcall dmc_conti_delay(WORD CardNo, WORD Crd, double delay_time,long mark);//添加延时指令
DMC_API short __stdcall dmc_conti_line_unit(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList,double* Target_Pos,WORD posi_mode,long mark);//连续插补直线
DMC_API short __stdcall dmc_conti_arc_move_center_unit(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList,double *Target_Pos,double *Cen_Pos,WORD Arc_Dir,long Circle,WORD posi_mode,long mark);//圆心终点式圆弧/螺旋线/渐开线/同心圆
DMC_API short __stdcall dmc_conti_arc_move_radius_unit(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList,double *Target_Pos,double Arc_Radius,WORD Arc_Dir,long Circle,WORD posi_mode,long mark);//半径终点式圆弧/螺旋线
DMC_API short __stdcall dmc_conti_arc_move_3points_unit(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList,double *Target_Pos,double *Mid_Pos,long Circle,WORD posi_mode,long mark);//三点式圆弧/螺旋线
DMC_API short __stdcall dmc_conti_set_involute_mode(WORD CardNo,WORD Crd,WORD mode);//渐开线整圆封闭
DMC_API short __stdcall dmc_conti_get_involute_mode(WORD CardNo,WORD Crd,WORD* mode);
DMC_API short __stdcall dmc_calculate_arclength_center(double* start_pos,double *target_pos,double *cen_pos, WORD arc_dir,double circle,double* ArcLength);//计算圆心圆弧弧长
DMC_API short __stdcall dmc_calculate_arclength_radius(double* start_pos,double *target_pos,double arc_radius, WORD arc_dir,double circle,double* ArcLength);//计算半径圆弧弧长
DMC_API short __stdcall dmc_calculate_arclength_3point(double *start_pos,double *mid_pos, double *end_pos,double circle,double* ArcLength);//计算三点圆弧弧长
//DMC5800专用 PWM及CanIO
DMC_API short __stdcall dmc_set_pwm_enable(WORD CardNo,WORD enable);//7号轴切换为PWM输出
DMC_API short __stdcall dmc_get_pwm_enable(WORD CardNo,WORD* enable);
DMC_API short __stdcall dmc_conti_set_pwm_output(WORD CardNo,WORD Crd, WORD pwm_no,double fDuty, double fFre);//连续插补中设置PWM输出
DMC_API short __stdcall dmc_set_pwm_output(WORD CardNo,WORD pwm_no,double fDuty, double fFre);//设置PWM输出
DMC_API short __stdcall dmc_get_pwm_output(WORD CardNo,WORD pwm_no,double* fDuty, double* fFre);
DMC_API short __stdcall dmc_conti_set_pwm_follow_speed(WORD CardNo,WORD Crd,WORD pwm_no,WORD mode,double MaxVel,double MaxValue,double OutValue);//PWM速度跟随
DMC_API short __stdcall dmc_conti_get_pwm_follow_speed(WORD CardNo,WORD Crd,WORD pwm_no,WORD* mode,double* MaxVel,double* MaxValue,double* OutValue);
DMC_API short __stdcall dmc_set_can_state(WORD CardNo,WORD NodeNum,WORD state);//0-断开；1-连接；2-复位后自动连接
DMC_API short __stdcall dmc_get_can_state(WORD CardNo,WORD* NodeNum,WORD* state);////0-断开；1-连接；2-异常
DMC_API short __stdcall dmc_get_can_errcode(WORD CardNo,WORD *Errcode);//读取CanIo通讯错误码
DMC_API short __stdcall dmc_write_can_outbit(WORD CardNo,WORD Node,WORD bitno,WORD on_off);
DMC_API short __stdcall dmc_read_can_outbit(WORD CardNo,WORD Node,WORD bitno);
DMC_API short __stdcall dmc_read_can_inbit(WORD CardNo,WORD Node,WORD bitno);
DMC_API short __stdcall dmc_write_can_outport(WORD CardNo,WORD Node,WORD portno,DWORD outport_val);//写CanIo输出口
DMC_API DWORD __stdcall dmc_read_can_outport(WORD CardNo,WORD Node,WORD portno);//读取CanIo输出端口
DMC_API DWORD __stdcall dmc_read_can_inport(WORD CardNo,WORD Node,WORD portno);//读取CanIo输入端口
DMC_API short __stdcall dmc_get_stop_reason(WORD CardNo,WORD axis,long* StopReason);//读取停止原因
DMC_API short __stdcall dmc_clear_stop_reason(WORD CardNo,WORD axis);//清除停止原因
//DMC3410 减速停止 对应 25 26 27 28输入口
//DMC_API short __stdcall dmc_set_io_dstp_mode(WORD CardNo,WORD axis,WORD enable,WORD logic); 	//启用减速停止IO及有效电平 //enable:0-禁用，1-按时间减速停止，2-按距离减速停止
//DMC_API short __stdcall dmc_get_io_dstp_mode(WORD CardNo,WORD axis,WORD *enable,WORD *logic); 
//DMC_API short __stdcall dmc_set_dec_stop_time(WORD CardNo,WORD axis,double time);
//DMC_API short __stdcall dmc_get_dec_stop_time(WORD CardNo,WORD axis,double *time); 
DMC_API short __stdcall dmc_set_dec_stop_dist(WORD CardNo,WORD axis,long dist);	//设置减速停止距离
DMC_API short __stdcall dmc_get_dec_stop_dist(WORD CardNo,WORD axis,long *dist);