资源包/LabVIEW有用程序/例程DMC3000系列/Delphi/Demo_IOTest/LTDMC.pas


//运动状态
function dmc_read_current_speed(CardNo:WORD;axis:WORD):Double;stdcall; //读取指定轴的当前速度
function dmc_read_vector_speed(CardNo:WORD):Double;stdcall; //读取当前卡的插补速度
function dmc_get_position(CardNo:WORD;axis:WORD):longint;stdcall;  //读取指定轴的当前位置
function dmc_set_position(CardNo:WORD;axis:WORD;current_position:longint):Smallint;stdcall; //设定指定轴的当前位置
function dmc_get_target_position(CardNo:WORD;axis:WORD):longint;stdcall;  //读取指定轴的当前位置
function dmc_check_done(CardNo:WORD;axis:WORD):Smallint;stdcall;
function dmc_check_done_multicoor(CardNo:WORD;crd:WORD):Smallint;stdcall;
function dmc_axis_io_status(CardNo:WORD;axis:WORD):Smallint;stdcall; //读取指定轴有关运动信号的状态
function dmc_stop(CardNo:WORD;axis:WORD;stop_mode:WORD):Smallint;stdcall; //单轴停止
function dmc_stop_multicoor(CardNo:WORD;crd:WORD;stop_mode:WORD):Smallint;stdcall;
function dmc_emg_stop(CardNo:WORD):Smallint;stdcall; //紧急停止所有轴
//检测轴到位状态
function dmc_set_factor_error(CardNo:WORD;axis:WORD;factor:double;error:longint):Smallint;stdcall;
function dmc_get_factor_error(CardNo:WORD;axis:WORD;out factor:double;out error:longint):Smallint;stdcall;
function dmc_check_success_pulse(CardNo:WORD;axis:WORD):Smallint;stdcall;
function dmc_check_success_encoder(CardNo:WORD;axis:WORD):Smallint;stdcall;
//3800专用 主卡与接线盒通讯状态
function dmc_LinkState(CardNo:WORD;out State:WORD):Smallint;stdcall; 	//连接状态

//密码管理
function dmc_check_sn(CardNo:WORD; check_sn:String):Smallint;stdcall;//验证密码，校验3次失败之后再次校验将返回校验失败
function dmc_write_sn(CardNo:WORD; new_sn:String):Smallint;stdcall;//改写密码

//DMC5410 DMC5800专用
function dmc_get_axis_run_mode(CardNo:WORD; axis:WORD; out run_mode:WORD):Smallint;stdcall;//轴运动模式
function dmc_get_equiv(CardNo:WORD; axis:WORD; out equiv:double):Smallint;stdcall;//脉冲当量
function dmc_set_equiv(CardNo:WORD; axis:WORD; equiv:double):Smallint;stdcall;
function dmc_set_backlash_unit(CardNo:WORD; axis:WORD; backlash:double):Smallint;stdcall;//反向间隙
function dmc_get_backlash_unit(CardNo:WORD; axis:WORD; out backlash:double):Smallint;stdcall;
function dmc_set_position_unit(CardNo:WORD; axis:WORD; pos:double):Smallint;stdcall;//当前指令位置
function dmc_get_position_unit(CardNo:WORD; axis:WORD; out pos:double):Smallint;stdcall;
function dmc_set_encoder_unit(CardNo:WORD; axis:WORD; pos:double):Smallint;stdcall;//当前反馈位置
function dmc_get_encoder_unit(CardNo:WORD; axis:WORD; out pos:double):Smallint;stdcall;
function dmc_pmove_unit(CardNo:WORD; axis:WORD; Dist:double; posi_mode:WORD):Smallint;stdcall;//定长
function dmc_t_pmove_unit(CardNo:WORD; axis:WORD; Dist:double; posi_mode:WORD):Smallint;stdcall;//对称T型定长
function dmc_ex_t_pmove_unit(CardNo:WORD; axis:WORD; Dist:double; posi_mode:WORD):Smallint;stdcall;//非对称T型定长
function dmc_s_pmove_unit(CardNo:WORD; axis:WORD; Dist:double; posi_mode:WORD):Smallint;stdcall;//对称S型定长
function dmc_ex_s_pmove_unit(CardNo:WORD; axis:WORD; Dist:double; posi_mode:WORD):Smallint;stdcall;//非对称S型定长
function dmc_line_unit(CardNo:WORD; Crd:WORD; AxisNum:WORD; out AxisList:WORD; out Target_Pos:double; posi_mode:WORD):Smallint;stdcall;//单段直线
function dmc_arc_move_center_unit(CardNo:WORD; Crd:WORD; AxisNum:WORD;out AxisList:WORD; out Target_Pos:double; out Cen_Pos:double; Arc_Dir:WORD; Circle:longint; posi_mode:WORD):Smallint;stdcall;//单段圆心圆弧/螺旋线/渐开线
function dmc_arc_move_radius_unit(CardNo:WORD; Crd:WORD; AxisNum:WORD;out AxisList:WORD; out Target_Pos:double; Arc_Radius:double; Arc_Dir:WORD; Circle:longint; posi_mode:WORD):Smallint;stdcall;//单段半径圆弧/螺旋线
function dmc_arc_move_3points_unit(CardNo:WORD; Crd:WORD; AxisNum:WORD;out AxisList:WORD; out Target_Pos:double; out Mid_Pos:double; Circle:longint; posi_mode:WORD):Smallint;stdcall//单段三点圆弧/螺旋线
function dmc_read_current_speed_unit(CardNo:WORD; axis:WORD; out current_speed:double):Smallint;stdcall;//轴当前运行速度
function dmc_set_vector_profile_unit(CardNo:WORD; Crd:WORD; Min_Vel:double; Max_Vel:double; Tacc:double; Tdec:double; Stop_Vel:double):Smallint;stdcall;//单段插补速度参数
function dmc_get_vector_profile_unit(CardNo:WORD; Crd:WORD; out Min_Vel:double; out Max_Vel:double; out Tacc:double; out Tdec:double; out Stop_Vel:double):Smallint;stdcall;
function dmc_set_vector_s_profile(CardNo:WORD; Crd:WORD; s_mode:WORD; s_para:double):Smallint;stdcall;//设置S型速度曲线参数
function dmc_get_vector_s_profile(CardNo:WORD; Crd:WORD; s_mode:WORD; out s_para:double):Smallint;stdcall;
function dmc_set_profile_unit(CardNo:WORD; axis:WORD; Min_Vel:double; Max_Vel:double; Tacc:double; Tdec:double; Stop_Vel:double):Smallint;stdcall;//单轴速度参数
function dmc_get_profile_unit(CardNo:WORD; axis:WORD; out Min_Vel:double; out Max_Vel:double; out Tacc:double; out Tdec:double; out Stop_Vel:double):Smallint;stdcall;
function dmc_reset_target_position_unit(CardNo:WORD; axis:WORD; New_Pos:double):Smallint;stdcall;//在线变位
function dmc_update_target_position_unit(CardNo:WORD; axis:WORD; New_Pos:double):Smallint;stdcall;//强行变位
function dmc_change_speed_unit(CardNo:WORD; axis:WORD; New_Vel:double; Taccdec:double):Smallint;stdcall;//在线变速

//连续插补
function dmc_conti_open_list(CardNo:WORD; Crd:WORD; AxisNum:WORD; out AxisList:WORD):Smallint;stdcall; //打开连续缓存区
function dmc_conti_close_list(CardNo:WORD; Crd:WORD):Smallint;stdcall;	//关闭连续缓存区
function dmc_conti_stop_list(CardNo:WORD; Crd:WORD; stop_mode:WORD):Smallint;stdcall;	//连续插补中停止
function dmc_conti_pause_list(CardNo:WORD; Crd:WORD):Smallint;stdcall;	//连续插补中暂停
function dmc_conti_start_list(CardNo:WORD; Crd:WORD):Smallint;stdcall;	//开始连续插补
function dmc_conti_remain_space(CardNo:WORD; Crd:WORD):Smallint;stdcall;	//查连续插补剩余缓存数
function dmc_conti_read_current_mark(CardNo:WORD; Crd:WORD):Smallint;stdcall;	//读取当前连续插补段的标号
function dmc_conti_set_blend(CardNo:WORD; Crd:WORD; enable:WORD):Smallint;stdcall;//blend拐角过度模式
function dmc_conti_get_blend(CardNo:WORD; Crd:WORD; out enable:WORD):Smallint;stdcall;
function dmc_conti_set_profile_unit(CardNo:WORD; Crd:WORD; Min_Vel:double; Max_vel:double; Tacc:double; Tdec:double; Stop_Vel:double):Smallint;stdcall;//设置连续插补速度
function dmc_conti_set_s_profile(CardNo:WORD; Crd:WORD; s_mode:WORD; s_para:double):Smallint;stdcall;//设置连续插补平滑时间
function dmc_conti_get_s_profile(CardNo:WORD; Crd:WORD; s_mode:WORD; out s_para:double):Smallint;stdcall;
function dmc_conti_set_pause_output(CardNo:WORD; Crd:WORD; action:WORD; mask:longint; state:longint):Smallint;stdcall;//暂停时IO输出 action：0-不动作；1-暂停时输出；2-暂停时输出, 继续运行时恢复；3-停止时输出。
function dmc_conti_get_pause_output(CardNo:WORD; Crd:WORD; out action:WORD; out mask:longint; out state:longint):Smallint;stdcall;
function dmc_conti_set_override(CardNo:WORD; Crd:WORD; Percent:double):Smallint;stdcall;//设置每段速度比例  缓冲区指令
function dmc_conti_change_speed_ratio (CardNo:WORD; Crd:WORD; Percent:double):Smallint;stdcall;//连续插补动态变速
function dmc_conti_get_run_state(CardNo:WORD; Crd:WORD):Smallint;stdcall;//读取连续插补状态：0-运行，1-暂停，2-正常停止，3-异常停止
function dmc_conti_check_done(CardNo:WORD; Crd:WORD):Smallint;stdcall;//检测连续插补运动状态：0-运行，1-停止
function dmc_conti_wait_input(CardNo:WORD; Crd:WORD; bitno:WORD; on_off:WORD; TimeOut:double; mark:longint):Smallint;stdcall;//设置连续插补等待输入
function dmc_conti_delay_outbit_to_start(CardNo:WORD; Crd:WORD; bitno:WORD; on_off:WORD; delay_value:double; delay_mode:WORD; ReverseTime:double):Smallint;stdcall;//相对于轨迹段起点IO滞后输出
function dmc_conti_delay_outbit_to_stop(CardNo:WORD; Crd:WORD; bitno:WORD; on_off:WORD; delay_time:double; ReverseTime:double):Smallint;stdcall;//相对于轨迹段终点IO滞后输出
function dmc_conti_ahead_outbit_to_stop(CardNo:WORD; Crd:WORD; bitno:WORD; on_off:WORD; ahead_value:double; ahead_mode:WORD; ReverseTime:double):Smallint;stdcall;//相对轨迹段终点IO提前输出
function dmc_conti_accurate_outbit_unit(CardNo:WORD; Crd:WORD; cmp_no:WORD; on_off:WORD; map_axis:WORD; rel_dist:double; pos_source:WORD; ReverseTime:double):Smallint;stdcall;//确定位置精确输出
function dmc_conti_write_outbit(CardNo:WORD; Crd:WORD; bitno:WORD; on_off:WORD; ReverseTime:double):Smallint;stdcall;//缓冲区立即IO输出
function dmc_conti_clear_io_action(CardNo:WORD; Crd:WORD; IoMask:longWORD):Smallint;stdcall;//清除段内未执行完的IO动作,防止在下一段执行
function dmc_conti_delay(CardNo:WORD; Crd:WORD; delay_time:double; mark:longWORD):Smallint;stdcall;//添加延时指令
function dmc_conti_line_unit(CardNo:WORD; Crd:WORD; AxisNum:WORD; out AxisList:WORD; out Target_Pos:double; posi_mode:WORD; mark:longint):Smallint;stdcall;//连续插补直线
function dmc_conti_arc_move_center_unit(CardNo:WORD; Crd:WORD; AxisNum:WORD; out AxisList:WORD; out Target_Pos:double; out Cen_Pos:double; Arc_Dir:WORD; Circle:longint; posi_mode:WORD; mark:longint):Smallint;stdcall;//圆心终点式圆弧/螺旋线/渐开线/同心圆
function dmc_conti_arc_move_radius_unit(CardNo:WORD; Crd:WORD; AxisNum:WORD; out AxisList:WORD; out Target_Pos:double; Arc_Radius:double; Arc_Dir:WORD; Circle:longint; posi_mode:WORD; mark:longint):Smallint;stdcall;//半径终点式圆弧/螺旋线
function dmc_conti_arc_move_3points_unit(CardNo:WORD; Crd:WORD; AxisNum:WORD; out AxisList:WORD; out Target_Pos:double; out Mid_Pos:double; Circle:longint; posi_mode:WORD; mark:longint):Smallint;stdcall;//三点式圆弧/螺旋线
function dmc_conti_set_involute_mode(CardNo:WORD; Crd:WORD; mode:WORD):Smallint;stdcall;//渐开线整圆封闭
function dmc_conti_get_involute_mode(CardNo:WORD; Crd:WORD; out mode:WORD):Smallint;stdcall;
function dmc_conti_rectangle_move(CardNo:WORD; Crd:WORD; AxisNum:WORD; out AxisList:WORD; out Target_Pos:double; out Mark_Pos:double; Count:longint; rect_mode:WORD; posi_mode:WORD; mark:longint):Smallint;stdcall;//矩形插补
function dmc_calculate_arclength_center(out start_pos:double; out target_pos:double; out cen_pos:double; arc_dir:WORD; circle:double; out ArcLength:double):Smallint;stdcall;//计算圆心圆弧弧长
function dmc_calculate_arclength_radius(out start_pos:double; out target_pos:double; arc_radius:double; arc_dir:WORD; circle:double; out ArcLength:double):Smallint;stdcall;//计算半径圆弧弧长
function dmc_calculate_arclength_3point(out start_pos:double; out mid_pos:double; out end_pos:double; circle:double; out ArcLength:double):Smallint;stdcall;//计算三点圆弧弧长
//DMC5800专用 PWM及CanIO
function dmc_set_pwm_enable(CardNo:WORD; enable:WORD):Smallint;stdcall;//7号轴切换为PWM输出
function dmc_get_pwm_enable(CardNo:WORD; out enable:WORD):Smallint;stdcall;
function dmc_conti_set_pwm_output(CardNo:WORD; Crd:WORD; pwm_no:WORD; fDuty:double; fFre:double):Smallint;stdcall;//连续插补中设置PWM输出
function dmc_set_pwm_output(CardNo:WORD; pwm_no:WORD; fDuty:double; fFre:double):Smallint;stdcall;//设置PWM输出
function dmc_get_pwm_output(CardNo:WORD; pwm_no:WORD; out fDuty:double; out fFre:double):Smallint;stdcall;
function dmc_conti_set_pwm_follow_speed(CardNo:WORD; Crd:WORD; pwm_no:WORD; mode:WORD; MaxVel:double; MaxValue:double; OutValue:double):Smallint;stdcall;//PWM速度跟随
function dmc_conti_get_pwm_follow_speed(CardNo:WORD; Crd:WORD; pwm_no:WORD; out mode:WORD; out MaxVel:double; out MaxValue:double; out OutValue:double):Smallint;stdcall;

function dmc_set_can_state(CardNo:WORD; NodeNum:WORD; state:WORD):Smallint;stdcall;//0-断开；1-连接；2-复位后自动连接
function dmc_get_can_state(CardNo:WORD; out NodeNum:WORD; out state:WORD):Smallint;stdcall;////0-断开；1-连接；2-异常
function dmc_get_can_errcode(CardNo:WORD; out Errcode:WORD):Smallint;stdcall;//读取CanIo通讯错误码
function dmc_write_can_outbit(CardNo:WORD; Node:WORD; bitno:WORD; on_off:WORD):Smallint;stdcall;
function dmc_read_can_outbit(CardNo:WORD; Node:WORD; bitno:WORD):Smallint;stdcall;
function dmc_read_can_inbit(CardNo:WORD; Node:WORD; bitno:WORD):Smallint;stdcall;
function dmc_write_can_outport(CardNo:WORD; Node:WORD; portno:WORD; outport_val:longWORD):Smallint;stdcall;//写CanIo输出口
function dmc_read_can_outport(CardNo:WORD; Node:WORD; portno:WORD):Smallint;stdcall;//读取CanIo输出端口
function dmc_read_can_inport(CardNo:WORD; Node:WORD; portno:WORD):Smallint;stdcall;//读取CanIo输入端口

function dmc_get_stop_reason(CardNo:WORD; axis:WORD; out StopReason:longint):Smallint;stdcall;//读取停止原因
function dmc_clear_stop_reason(CardNo:WORD; axis:WORD):Smallint;stdcall;//清除停止原因

function dmc_set_dec_stop_dist(CardNo:WORD; axis:WORD; dist:longint):Smallint;stdcall;	//设置减速停止距离
function dmc_get_dec_stop_dist(CardNo:WORD; axis:WORD; out dist:longint):Smallint;stdcall;
